[tool.poetry]
name = "personal-study-assistant"
version = "0.1.0"
description = "AI-powered Personal Study Assistant"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.45.1"
google-generativeai = "^0.8.5"
pandas = "^2.3.0"
plotly = "^6.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
