[tool.poetry]
name = "personal-study-assistant"
version = "0.1.0"
description = "AI-powered Personal Study Assistant"
authors = ["Study Assistant <assistant@example.com>"]
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"  # Now requires Python 3.9+, but still avoids 3.9.7
streamlit = "^1.28.0"
google-generativeai = "^0.3.0"
pandas = "^1.3.0"
plotly = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"